syntax = "proto3";

package todoPackage;

service Todo {
  rpc createTodo(TodoItem) returns (TodoItem);
  rpc readTodos(NoParams) returns (TodoItems);
  rpc readTodosStream(NoParams) returns (stream TodoItem);
}

message NoParams {}

message TodoItem {
  int32 id = 2;
  string text = 1;
}

message TodoItems {
  repeated TodoItem items = 1;
}

